Fixed waves demo spacing

--- a/css/ghpages-materialize.css
+++ b/css/ghpages-materialize.css
@@ -7842,10 +7842,10 @@ body.parallax-demo footer {
     max-width: 100%; } }
 
 .waves-color-demo .collection-item {
-  height: 36px;
-  line-height: 36px; }
+  height: 57px;
+  line-height: 57px; }
   .waves-color-demo .collection-item code {
-    line-height: 36px; }
+    line-height: 57px; }
 .waves-color-demo .btn:not(.waves-light), .waves-color-demo .btn-large:not(.waves-light) {
   background-color: #FFFFFF;
   color: #212121; }
