--- a/sass/style.scss
+++ b/sass/style.scss
@@ -594,10 +594,10 @@ body.parallax-demo footer {
 // Waves page styling
 .waves-color-demo {
   .collection-item {
-    height: 36px;
-    line-height: 36px;
+    height: 57px;
+    line-height: 57px;
     code {
-     line-height: 36px; 
+     line-height: 57px; 
     }
   }
   .btn {
